Lehčí úprava komentářů pro přehlednost

--- a/tasks/01/index.html
+++ b/tasks/01/index.html
@@ -52,7 +52,9 @@
 	</main>
 
 	<script>
+		//
 		// ČÁST A) AŽ C)
+		//
 
 		let jmeno = prompt("Jaké jméno dnes urazíme? 😈");
 		let urazka = prompt("Jakým slovem ho urazíme? 😈");
@@ -68,7 +70,9 @@
   			alert("Nezadal si žádné jméno ani urážku 😔");
 		}
 
+		//
 		// ČÁST D) AŽ E)
+		//
 
 		// let cisloJedna = parseInt(prompt("První číslo 🔢"));
 		// let cisloDva = parseInt(prompt("Druhé číslo 🔢"));
@@ -81,7 +85,9 @@
 
 		// console.log("🚀 ~ vysledek:", vysledek)
 
-		// // ČÁST F) AŽ H)
+		//
+		// ČÁST F) AŽ H)
+		//
 
 		// let productQuantity = 10;
 		// let productPrice = 100;
@@ -129,7 +135,9 @@
 		// console.log("🚀 ~ Cart result:", "Nakoupil si " + productQuantity + " produktů a nyní si chudší o " + cartTotalFormatted + " 🤭😅")
 		// console.log("🚀 ~ Discount result:", "Využil si slevu " + discountAmount + " % a nyní je cena " + discountTotal + ". Ušetřil si " + discountValue +". FRAJER! 🤘")
 
-		// // UPRAVENÁ ČÁST F) AŽ H) ZDE DOSTÁVÁM HODNOTY Z UŽIVATELSKÉHO VSTUPU
+		//
+		// UPRAVENÁ ČÁST F) AŽ H) ZDE DOSTÁVÁM HODNOTY Z UŽIVATELSKÉHO VSTUPU
+		//
 
 		// let productQuantity = prompt("Kolik produktů chcete koupit?");
 		// let productPrice = prompt("Kolik má produkt stát?").replace(',','.');
