Lehké úpravy kódu a přidáno trochu vtipu :D

--- a/tasks/01/index.html
+++ b/tasks/01/index.html
@@ -74,8 +74,8 @@
 		// ČÁST D) AŽ E)
 		//
 
-		// let cisloJedna = parseInt(prompt("První číslo 🔢"));
-		// let cisloDva = parseInt(prompt("Druhé číslo 🔢"));
+		// let cisloJedna = parseFloat(prompt("První číslo 🔢").replace(',','.'));
+		// let cisloDva = parseFloat(prompt("Druhé číslo 🔢").replace(',','.'));
 		// let vysledek = scitani(cisloJedna, cisloDva);
 		
 		// function scitani(cisloJedna, cisloDva) {
@@ -91,7 +91,7 @@
 
 		// let productQuantity = 10;
 		// let productPrice = 100;
-		// let discountAmount = 50;
+		// let discountAmount = 23;
 
 		// function calcCart(productQuantity, productPrice) {
 		// 	// Vypočítání celkové ceny košíku
@@ -132,18 +132,18 @@
 		// let [discountValue, discountTotal] = discount(cartTotal, discountAmount)
 
 		// // Hodnoty vypisované do konzole
-		// console.log("🚀 ~ Cart result:", "Nakoupil si " + productQuantity + " produktů a nyní si chudší o " + cartTotalFormatted + " 🤭😅")
-		// console.log("🚀 ~ Discount result:", "Využil si slevu " + discountAmount + " % a nyní je cena " + discountTotal + ". Ušetřil si " + discountValue +". FRAJER! 🤘")
+		// console.log("🚀 ~ Výsledek v košíku:", "Nakoupil si " + productQuantity + " produktů (jeden produkt tě stál " + formattedSum(productPrice) + "). Proto si teď chudší o " + cartTotalFormatted + " 🤭😅 *MAGIC* > https://www.youtube.com/watch?v=Qji5x8gBVX4")
+		// console.log("🚀 ~ Výsledek se slevou:", "Využil si slevu " + discountAmount + " % a nyní je cena " + discountTotal + ". Ušetřil si " + discountValue +". FRAJER! 🤘 > https://www.youtube.com/watch?v=DWtpNPZ4tb4")
 
 		//
 		// UPRAVENÁ ČÁST F) AŽ H) ZDE DOSTÁVÁM HODNOTY Z UŽIVATELSKÉHO VSTUPU
 		//
 
-		// let productQuantity = prompt("Kolik produktů chcete koupit?");
-		// let productPrice = prompt("Kolik má produkt stát?").replace(',','.');
-		// let discountAmount = prompt("Jak velkou chceš slevu?").replace('%','');
-		// let language = prompt("V jakém jazyce chceš formátovat měnu? (cs-CZ,en-GB, en-US, de-DE apod.)");
-		// let currency = prompt("V jaké měně chceš formátovat měnu? (czk, eur nebo usd?");
+		// let productQuantity = prompt("Kolik produktů chcete koupit? 💸");
+		// let productPrice = prompt("Kolik má produkt stát? 💰").replace(',','.');
+		// let discountAmount = prompt("Jak velkou chceš slevu? ％").replace('%','');
+		// let language = prompt("V jakém jazyce chceš formátovat měnu? 👅 (cs-CZ,en-GB, en-US, de-DE apod.)");
+		// let currency = prompt("V jaké měně chceš formátovat měnu? 💶 (czk, eur nebo usd?");
 
 
 		// function calcCart(productQuantity, productPrice) {
@@ -185,8 +185,8 @@
 		// let [discountValue, discountTotal] = discount(cartTotal, discountAmount)
 
 		// // Hodnoty vypisované do konzole
-		// console.log("🚀 ~ Cart result:", "Nakoupil si " + productQuantity + " produktů a nyní si chudší o " + cartTotalFormatted + " 🤭😅")
-		// console.log("🚀 ~ Discount result:", "Využil si slevu " + discountAmount + " % a nyní je cena " + discountTotal + ". Ušetřil si " + discountValue +". FRAJER! 🤘")
+		// console.log("🚀 ~ Výsledek v košíku:", "Nakoupil si " + productQuantity + " produktů (jeden produkt tě stál " + formattedSum(productPrice) + "). Proto si teď chudší o " + cartTotalFormatted + " 🤭😅 *MAGIC* > https://www.youtube.com/watch?v=Qji5x8gBVX4")
+		// console.log("🚀 ~ Výsledek se slevou:", "Využil si slevu " + discountAmount + " % a nyní je cena " + discountTotal + ". Ušetřil si " + discountValue +". FRAJER! 🤘 > https://www.youtube.com/watch?v=DWtpNPZ4tb4")
 
 	</script>
   
